Handle sonar